<resources>
    <string name="app_name">The Roots of Taro</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="attack">Attack</string>
    <string name="wait">Wait</string>
    <string name="endTurn">End Turn</string>
    <string name="cancel">Cancel Move</string>
    <string name="unitType">Unit Type: </string>
    <string name="attackStatLabel">Attack: </string>
    <string name="defenseStatLabel">Defense: </string>
    <string name="attackRangeStatLabel">Attack Range: </string>
    <string name="moveStatLabel">Move: </string>
    <string name="loseTitle">You Lost!</string>
    <string name="mainMenu">Main Menu</string>
    <string name="playAgain">Play Again?</string>
    <string name="gameTitle">The Roots of Taro</string>
    <string name="newGame">New Game</string>
    <string name="quit">Quit</string>
    <string name="dialogIntro">The Kingdom Of Taro has been viewed as barbarians by the other kingdoms. However, his Taroness has big dreams! He dreams of an Empire. As a captain in his majesty\'s army, your task is to make his dream a reality. \n First step is to conquer the Beet Root Empire. Your task is to eliminate all enemy forces.\n Good Luck Commander</string>
    <string name="dialogIntroTitle">Welcome Commander</string>
    <string name="dialogOK">OK! To Battle!</string>
    <string name="winTitle">You Are Victorious</string>
    <string name="descriptionLabel">Description: </string>
    <string name="unitStatus">Status: </string>
    <string name="turnText">Turn </string>
    <!--stats-->
    <string name="hpStatText">Hit Point: </string>
    <string name="attackStatText">Attack: </string>
    <string name="defenseStatText">Defense: </string>
    <string name="movePointsStatsText">Move: </string>

</resources>
