<?xml version="1.0" encoding="utf-8"?>
<com.zhang3r.onelevelgame.views.MapUiView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/uiView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight=".7"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_column="4"
        android:layout_weight=".3">


        <TextView
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/textView"
            android:layout_row="0"
            android:layout_column="0" />

        <ImageView
            android:id="@+id/image1"
            android:layout_width="50dp"
            android:layout_height="75dp"
            android:contentDescription="@string/app_name"
            android:background="#000"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/textView8"
            android:layout_row="1"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/textView3"
            android:layout_row="3"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/textView2"
            android:layout_row="3"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/textView5"
            android:layout_row="4"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/textView4"
            android:layout_row="4"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/textView7"
            android:layout_row="5"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/textView6"
            android:layout_row="5"
            android:layout_column="1" />

    </GridLayout>

    <View
        android:layout_height="2dip"
        android:background="#FF0000"
        android:layout_width="wrap_content"
        android:layout_column="0" />
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight=".7">
        <!-- first row -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:padding="5dip">

            <Button
                android:id="@+id/attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attack"
                android:layout_column="1" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_column="2" />



        </TableRow>
        <!-- second row -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:padding="5dip">

            <Button
                android:id="@+id/wait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wait"
                android:layout_column="1" />

            <Button
                android:id="@+id/endTurn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endTurn"
                android:layout_column="2" />

        </TableRow>
        <!-- just draw a red line -->



    </TableLayout>
</com.zhang3r.onelevelgame.views.MapUiView>
